--- a/aquacontrol-front/package.json
+++ b/aquacontrol-front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
