--- a/aquacontrol-front/package.json
+++ b/aquacontrol-front/package.json
@@ -8,6 +8,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-flexbox-grid": "^1.1.3",
+    "react-router": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "react-transition-group": "^1.1.3"
   },
